Prevent scrollbar from pushing page

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -6,7 +6,7 @@
 
 @layer base {
   html {
-    overflow: hidden;
+    overflow-y: scroll;
   }
 
   html,
